Onion Skin Alignment After Image Crop Fix

Onion Skin Cache needs to be flushed after running image processes on
multiple frames.

BUG:419462
(cherry picked from commit 2446ca4e78b627edbacb922fc1dc345622d12f0a)